--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -3,6 +3,11 @@ body {
   margin: 5%;
 }
 
+.button {
+  border: black solid 4px;
+  color: lime;
+}
+
 .app {
   border: black solid 4px;
   margin: 5px;
@@ -16,6 +21,10 @@ body {
   margin: 20px;
 }
 
+.shame {
+  color: red;
+}
+
 .tile {
   border: solid 2px fuchsia;
   max-width: 600px;
@@ -23,6 +32,6 @@ body {
   margin: 20px;
 }
 
-.shame {
-  color: #ff0000;
+.bestest {
+  background-color: lime;
 }
